--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.60.5",
-    "@types/memoizee": "^0.4.12",
     "@types/multer": "^2.0.0",
     "@types/node-fetch": "^2.6.13",
     "@types/pdfkit": "^0.17.2",
@@ -64,14 +63,12 @@
     "input-otp": "^1.4.2",
     "katex": "^0.16.22",
     "lucide-react": "^0.453.0",
-    "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
     "multer": "^2.0.2",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "openai": "^5.15.0",
-    "openid-client": "^6.8.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.17.1",
@@ -100,7 +97,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "^20.16.11",
+    "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
@@ -112,9 +109,9 @@
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.20.5",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.20"
+    "tsx": "^4.19.1",
+    "typescript": "5.6.3",
+    "vite": "^5.4.14"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
